--- a/foundamentals/common-terms-in-software.adoc
+++ b/foundamentals/common-terms-in-software.adoc
@@ -27,7 +27,7 @@ A named variable value, for example age=30
 
 A named series of instructions, for example:
 
-[source]
+[%linenums,source]
 calculateArea
   lenght=2
   width=3
@@ -38,7 +38,7 @@ calculateArea
 
 A piece of text within a code base that it's not used by the computer, and it's only used by any person reading the code
 
-[source]
+[%linenums,source]
 //Method that calculates the area
 methodName
   // provided lenght
@@ -57,7 +57,7 @@ That being said, depending on certain situations, you won't be able to write a c
 
 A self-contained named code that contains properties (constants or variables) and/or methods
 
-[source]
+[%linenums,source]
 ----
 class Human
   int age
@@ -72,7 +72,7 @@ class Human
 
 A method that only purpose it's to be able to create an instance of a class
 
-[source]
+[%linenums,source]
 ----
 class Human
   int humanAge
@@ -101,7 +101,7 @@ Notice that this class contains 2 constructors, that means that if we want to cr
 
 An instance of a class
 
-[source]
+[%linenums,source]
 ----
 damianWhenHeWasYoung = new Human(15,'Damian')
 
@@ -114,7 +114,7 @@ Notice that we can create an instance of the previous example of the class with 
 == Conditions
 As it's name implies, is a condition that has to be met to execute a certain piece of code
 
-[source]
+[%linenums,source]
 ----
  if age>21 then
    print "You are an adult"
@@ -125,13 +125,12 @@ As it's name implies, is a condition that has to be met to execute a certain pie
 == Loop
 A block of code that will execute while the initial condition is meet
 
-[source]
+[%linenums,source]
 while age<21
   print "You are not allowed as you are not an adult yet, come back later"
 
 == DRY
-Do not repeat yourself, a very important yet sometimes ignored software principle, the main idea is that you should not repeat code as this will create a lot of problems in the long run
+Do not repeat yourself, a very important (if not the most important) yet sometimes ignored software principle, the main idea is that you should not repeat your intention in the code as this will create a lot of problems in the long run, several techniques can be applied such as making a code more generic so that common pieces of code can live together and different parts of the code can live in other parts of the project
 
 == KISS
 Keep it short and simple. Usually in software engineering, it's very common to see "over-engineered" projects, that are more complicated that it should be, in general the rule is that do not create things that you will need
-
