--- a/a-call-to-adventure/a-call-to-adventure.adoc
+++ b/a-call-to-adventure/a-call-to-adventure.adoc
@@ -2,7 +2,7 @@
 
 The main idea behind "The way of a software engineer" is to provide a general guide along all the steps of a software engineer carer based on concepts told in a certain sequence, which should help the reader to follow a path in case that he is lost in the way. As a software engineer I have felt a couple of times in my career that the software engineer path is unclear and a constant feeling of walking in a direction that it doesn't seem to be where I want to be.
 
-Fundamentals is aimed to the initial step in the career of a software engineer. When I was in school I felt that either that I was missing some important classes or that something was missing. After 8 years of working as a software engineer I still feel that I'm missing something but the feeling have been way less frequent.
+A call to adventure reflects the initial step in the career of a software engineer. When I was in school I felt that either that I was missing some important classes or that something was missing. After 9 years of working as a software engineer I still feel that I'm missing something but the feeling have been way less frequent.
 
 I want to keep this series as an "open source" as I want to create a starting point for software engineers across the industry to add anything that I might be missing and also use this material as a reference for anyone that might get lost in their path to find the way either by themselves or by a recommendation of a good friend or mentor.
 
