--- a/a-call-to-adventure/a-call-to-adventure.adoc
+++ b/a-call-to-adventure/a-call-to-adventure.adoc
@@ -1,4 +1,4 @@
-= The way of a software engineer - Fundamentals
+= The way of a software engineer - A call to adventure
 
 The main idea behind "The way of a software engineer" is to provide a general guide along all the steps of a software engineer carer based on concepts told in a certain sequence, which should help the reader to follow a path in case that he is lost in the way. As a software engineer I have felt a couple of times in my career that the software engineer path is unclear and a constant feeling of walking in a direction that it doesn't seem to be where I want to be.
 
@@ -7,6 +7,6 @@ A call to adventure reflects the initial step in the career of a software engine
 I want to keep this series as an "open source" as I want to create a starting point for software engineers across the industry to add anything that I might be missing and also use this material as a reference for anyone that might get lost in their path to find the way either by themselves or by a recommendation of a good friend or mentor.
 
 include::what-its-software.adoc[leveloffset=1]
-include::computer-foundamentals.adoc[leveloffset=1]
+include::core-computer-concepts.adoc[leveloffset=1]
 include::common-terms-in-software.adoc[leveloffset=1]
 include::programming-paradigms.adoc[leveloffset=1]
